# genai-son

./: .gitignore  Cargo.toml  README.md  copia.md  copia.sh  copy.sh  index.html  wsgl-analyser.toml
src/: camera.rs  engine.rs  hud.rs  main.rs  physics.rs  player.rs  shader.wgsl  world.rs
src/camera/: mod.rs
src/engine/: mod.rs  state.rs  time.rs
src/engine/graphics/: device.rs  mod.rs  pipeline_builder.rs
src/engine/input/: keyboard.rs  mod.rs  mouse.rs
src/engine/voxel/: material.rs  mod.rs  storage.rs  synchronization.rs
src/entities/: camera.rs  mod.rs  player.rs  projectiles.rs
src/entities/player/: mod.rs  physics.rs
src/game/: mod.rs
src/game/combat/: mod.rs
src/game/combat/arsenal/: bazooka.rs  creator.rs  mod.rs  plasma.rs
src/game/player/: camera.rs  controller.rs  math_util.rs  mod.rs  physics.rs
src/game/world_gen/: mod.rs  planet.rs
src/game/world_gen/biomes/: mod.rs
src/graphics/: buffers.rs  core.rs  mod.rs  pipelines.rs
src/graphics/shaders/: physics_core.wgsl  physics_fluids.wgsl  projectiles.wgsl  render.wgsl  weapons.wgsl  world_gen.wgsl
src/hud/: mod.rs
src/physics/: mod.rs  sand.rs
src/player/: camera.rs  god_mode.rs  mod.rs  movement.rs  weapons.rs
src/shaders/: physics.wgsl  render.wgsl  render_main.wgsl
src/shaders/include/: constant.wgsl  globals.wgsl  math.wgsl  struct.wgsl  vertex.wgsl
src/shaders/pcg/: biomes.wgsl  planet_gen.wgsl
src/shaders/physics/: dirt.wgsl  fluids.wgsl  gas.wgsl  physics_main.wgsl  sand.wgsl
src/shaders/post_process/: psx.wgsl
src/shaders/raytracer/: dda.wgsl  lighting.wgsl
src/world/: biomes.rs  generator.rs  mesher.rs  mod.rs  terrain.rs
