[package]
name = "genai_revolution"
version = "0.1.0"
edition = "2024"

[dependencies]
# A vanguarda gráfica de 2026
wgpu = "28.0"
winit = "0.30" 
env_logger = "0.11"
log = "0.4"
pollster = "0.3" 
bytemuck = { version = "1.16", features = ["derive"] } 

# Matemática e Ruído
noise = "0.9"
sysinfo = "0.30"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3